수강편람 업데이트(2012-2)

--- a/data/htm/2012_2_basics_science.htm
+++ b/data/htm/2012_2_basics_science.htm
@@ -134,7 +134,7 @@
 <td class="pstyle2">월&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-110&nbsp;</td>
-<td class="pstyle2">이상혁&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -147,7 +147,7 @@
 <td class="pstyle2">수&nbsp;3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-110&nbsp;</td>
-<td class="pstyle2">이상혁&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -160,7 +160,7 @@
 <td class="pstyle2">금&nbsp;3,4,3,4&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">020-104&nbsp;</td>
-<td class="pstyle2">이상혁&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -992,7 +992,7 @@
 <td class="pstyle2">월&nbsp;7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">025-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상혁&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1005,7 +1005,7 @@
 <td class="pstyle2">수&nbsp;7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">025-110&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상혁&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1018,7 +1018,7 @@
 <td class="pstyle2">금&nbsp;7,8,7,8&nbsp;</td>
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">024-210&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이상혁&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2578,7 +2578,7 @@
 <td class="pstyle2">월&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-101&nbsp;</td>
-<td class="pstyle2">박종상&nbsp;</td>
+<td class="pstyle2">이명수&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2591,7 +2591,7 @@
 <td class="pstyle2">수&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-101&nbsp;</td>
-<td class="pstyle2">박종상&nbsp;</td>
+<td class="pstyle2">이명수&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2604,7 +2604,7 @@
 <td class="pstyle2">금&nbsp;2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-101&nbsp;</td>
-<td class="pstyle2">박종상&nbsp;</td>
+<td class="pstyle2">이명수&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2956,7 +2956,7 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">102-201&nbsp;</td>
 <td class="pstyle2">조인순&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -2969,7 +2969,7 @@
 <td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">102-201&nbsp;</td>
 <td class="pstyle2">조인순&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -3472,9 +3472,9 @@
 <td class="pstyle2">공학수학 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">034-114&nbsp;</td>
+<td class="pstyle2">043-101&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3485,9 +3485,9 @@
 <td class="pstyle2">공학수학 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">034-114&nbsp;</td>
+<td class="pstyle2">043-101&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3570,7 +3570,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">001&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3583,7 +3583,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">001&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3596,7 +3596,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">002&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3609,7 +3609,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">002&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3622,7 +3622,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">003&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3635,7 +3635,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">003&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3648,7 +3648,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">004&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3661,7 +3661,7 @@
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">004&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3674,7 +3674,7 @@
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">005&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3687,7 +3687,7 @@
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">005&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3726,7 +3726,7 @@
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">007&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3739,7 +3739,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">007&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3752,7 +3752,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">008&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3765,7 +3765,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">008&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3778,7 +3778,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">009&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3791,7 +3791,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">009&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3804,7 +3804,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">010&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3817,7 +3817,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">010&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3830,7 +3830,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">011&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3843,7 +3843,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">011&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3856,7 +3856,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">012&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3869,7 +3869,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">012&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3882,7 +3882,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">013&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3895,7 +3895,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">013&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3908,7 +3908,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">014&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3921,7 +3921,7 @@
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">014&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3934,7 +3934,7 @@
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">015&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3947,7 +3947,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">015&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3960,7 +3960,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">016&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3973,7 +3973,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">016&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3986,7 +3986,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">017&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -3999,7 +3999,7 @@
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
-<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">2학년&nbsp;</td>
 <td class="pstyle2">010.141&nbsp;</td>
 <td class="pstyle2">017&nbsp;</td>
 <td class="pstyle2">공학수학 2&nbsp;</td>
@@ -4356,9 +4356,9 @@
 <td class="pstyle2">물리의 기본 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">026-108&nbsp;</td>
+<td class="pstyle2">028-301&nbsp;</td>
 <td class="pstyle2">최선호&nbsp;</td>
 <td class="pstyle2">200&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4369,9 +4369,9 @@
 <td class="pstyle2">물리의 기본 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">026-108&nbsp;</td>
+<td class="pstyle2">028-301&nbsp;</td>
 <td class="pstyle2">최선호&nbsp;</td>
 <td class="pstyle2">200&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
