--- a/data/htm/2012_2_normal_art.htm
+++ b/data/htm/2012_2_normal_art.htm
@@ -146,7 +146,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-106&nbsp;</td>
+<td class="pstyle2">001-203&nbsp;</td>
 <td class="pstyle2">이종숙&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -159,7 +159,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-106&nbsp;</td>
+<td class="pstyle2">001-203&nbsp;</td>
 <td class="pstyle2">이종숙&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -212,7 +212,7 @@
 <td class="pstyle2">화&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">008-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">윤기덕&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -391,9 +391,9 @@
 <td class="pstyle2">현대예술의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-2-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;3,4&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-211&nbsp;</td>
+<td class="pstyle2">006-103&nbsp;</td>
 <td class="pstyle2">강미정&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -495,9 +495,9 @@
 <td class="pstyle2">고대희랍.로마문학의 세계&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">화&nbsp;6.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-107&nbsp;</td>
+<td class="pstyle2">014-212A&nbsp;</td>
 <td class="pstyle2">안재원&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -508,9 +508,9 @@
 <td class="pstyle2">고대희랍.로마문학의 세계&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">목&nbsp;6.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-107&nbsp;</td>
+<td class="pstyle2">014-212A&nbsp;</td>
 <td class="pstyle2">안재원&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1366,10 +1366,10 @@
 <td class="pstyle2">소그룹 고전원전읽기 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;8,9&nbsp;</td>
+<td class="pstyle2">금&nbsp;6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-434&nbsp;</td>
-<td class="pstyle2">김현균&nbsp;</td>
+<td class="pstyle2">003-205&nbsp;</td>
+<td class="pstyle2">김춘진&nbsp;</td>
 <td class="pstyle2">5&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
