--- a/data/htm/2012_2_normal_korean.htm
+++ b/data/htm/2012_2_normal_korean.htm
@@ -95,7 +95,7 @@
 <td class="pstyle2">월&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">장경현&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 
