--- a/data/htm/2012_2_core_society.htm
+++ b/data/htm/2012_2_core_society.htm
@@ -573,9 +573,9 @@
 <td class="pstyle2">국가발전의 기본원리&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-506&nbsp;</td>
+<td class="pstyle2">083-203&nbsp;</td>
 <td class="pstyle2">김태유&nbsp;</td>
 <td class="pstyle2">150&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -586,9 +586,9 @@
 <td class="pstyle2">국가발전의 기본원리&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-506&nbsp;</td>
+<td class="pstyle2">083-203&nbsp;</td>
 <td class="pstyle2">김태유&nbsp;</td>
 <td class="pstyle2">150&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
