수강편람 업데이트(2012-2)

--- a/data/htm/2012_2_basics_foreign.htm
+++ b/data/htm/2012_2_basics_foreign.htm
@@ -4746,9 +4746,9 @@
 <td class="pstyle2">라틴어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">003-107&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -4759,9 +4759,9 @@
 <td class="pstyle2">라틴어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">003-107&nbsp;</td>
 <td class="pstyle2">권혁성&nbsp;</td>
 <td class="pstyle2">35&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
