--- a/data/htm/2012_2_normal_art.htm
+++ b/data/htm/2012_2_normal_art.htm
@@ -209,9 +209,9 @@
 <td class="pstyle2">언어와 인간&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;1.5,2.5,3.5&nbsp;</td>
+<td class="pstyle2">금&nbsp;1.5,2.5,3.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">008-101&nbsp;</td>
+<td class="pstyle2">006-103&nbsp;</td>
 <td class="pstyle2">윤기덕&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1397,19 +1397,6 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">한정숙&nbsp;</td>
 <td class="pstyle2">5&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">003.088&nbsp;</td>
-<td class="pstyle2">012&nbsp;</td>
-<td class="pstyle2">소그룹 고전원전읽기 2&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">1-2-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;10,11&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-110B&nbsp;</td>
-<td class="pstyle2">이석재&nbsp;</td>
-<td class="pstyle2">7&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
