--- a/data/htm/2012_2_normal_society.htm
+++ b/data/htm/2012_2_normal_society.htm
@@ -563,7 +563,7 @@
 <td class="pstyle2">화&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-302&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">배영애&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
